feat: add adaptive

--- a/card/card.html
+++ b/card/card.html
@@ -57,197 +57,30 @@
       </div>
     </header>
     <main class="main">
-      <section id="cards" class="cards">
-        <aside class="cards__aside">
-          <div class="cards__filter">
-            <p class="cards__menu">Меню</p>
-            <div class="cards__filter-el">
-              <div class="cards__el">
-                <a id="pizza" class="cards__link" href="">Пицца</a>
-              </div>
-              <div class="cards__el">
-                <a id="cold-rolls" class="cards__link" href="">Холодные роллы</a>
-              </div>
-              <div class="cards__el">
-                <a id="hot-rolls" class="cards__link" href="">Горячие роллы</a>
-              </div>
-              <div class="cards__el">
-                <a id="fastfood" class="cards__link" href="">Фастфуд</a>
-              </div>
-              <div class="cards__el">
-                <a id="drinks" class="cards__link" href="">Напитки</a>
-              </div>
+      <section class="big-card">
+        <div class="big-card__main-container">
+          <div class="big-card__card-block">
+            <div class="big-card__img-block">
+              <img src="../img/azalia.png" class="big-card__img" alt="azalia">
             </div>
-          </div>
-        </aside>
-        <div class="row">
-          <div class="col justify-content-center">
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text"><del>20р.</del> <ins>15р.</ins></p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
+            <div class="big-card__text-block">
+              <h2 class="big-card__title">Азалия</h2>
+              <p class="big-card__desc-text">8 шт/ 220 г/ 110.1 ккал</p>
+              <p class="big-card__compound-text">водоросли нори 0,5,
+                рис 140 гр,
+                сыр креметто 55 гр,
+                свежий огурчик 20 гр,
+                лосось 30 гр</p>
+              <p class="big-card__price">20р.
+              </p>
+              <a href="#" class="btn btn-success cards__btn big-card__btn">
+                <div class="cards__basket">
+                  <img src="../img/basket2.png" alt="basket">
                 </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
-              </div>
+                <p class="cards__basket-title">в корзину</p>
+              </a>
             </div>
           </div>
-          <div class="col justify-content-center">
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text">20р.
-                  </p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
-                </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col justify-content-center">
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text">20р.
-                  </p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
-                </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col justify-content-center">
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text">20р.
-                  </p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
-                </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col justify-content-center">
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text">20р.
-                  </p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
-                </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
-              </div>
-            </div>
-          </div>
-          <div class="col justify-content-center">
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text">20р.
-                  </p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
-                </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
-              </div>
-            </div>
-          </div>
-          <nav aria-label="Page navigation example">
-            <ul id="pagination" class="pagination">
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Previous">
-                  <span aria-hidden="true">&laquo;</span>
-                </a>
-              </li>
-              <li class="page-item"><a class="page-link" href="#">1</a></li>
-              <li class="page-item"><a class="page-link" href="#">2</a></li>
-              <li class="page-item"><a class="page-link" href="#">3</a></li>
-              <li class="page-item"><a class="page-link" href="#">4</a></li>
-              <li class="page-item">
-                <a class="page-link" href="#" aria-label="Next">
-                  <span aria-hidden="true">&raquo;</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
         </div>
       </section>
     </main>
