--- a/index.html
+++ b/index.html
@@ -15,6 +15,25 @@
 <body>
   <div id="container" class="container">
     <header id="header" class="header">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="menu/menu.html">Меню</a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#">Контакты</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">О нас</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
       <div class="header__logo-drop">
         <div class="header__logo-title">
           <div class="header__logo">
@@ -22,39 +41,37 @@
           </div>
           <div class="header__nav-title">
             <h1 class="header__title">Готовим изысканные роллы!</h1>
-            <nav class="header__nav">
-              <ul class="header__nav-list">
-                <li><a class="header__nav-link" href="#footer">Контакты</a></li>
-                <li><a class="header__nav-link" href="#filter-menu__link">О нас</a></li>
-                <li><a class="header__nav-link header__menu-link" href="menu/menu.html">Меню</a></li>
-              </ul>
-            </nav>
-          </div>
-        </div>
-        <div class="header__btn-block">
-          <a class="btn btn-success" href="#" role="button">Вход</a>
-          <a class="btn btn-success header__link-basket" href="#" role="button">
-            <div class="header__basket">
-              <img src="img/basket2.png" alt="basket">
+            <div class="collapse" id="navbarToggleExternalContent">
+              <div class="bg-dark p-4">
+                <h5 class="text-white h4">Collapsed content</h5>
+                <span class="text-muted">Toggleable via the navbar brand.</span>
+              </div>
             </div>
-            Корзина
-          </a>
-          <div class="dropdown">
-            <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown"
-              aria-expanded="false">
-              Профиль
-            </button>
-            <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#">Заказы</a></li>
-              <li><a class="dropdown-item" href="#">Админ панель</a></li>
-              <li>
-                <hr class="dropdown-divider">
-              </li>
-              <li><a class="dropdown-item" href="#">Выход</a></li>
-            </ul>
+          </div>
+          <div class="header__btn-block">
+            <a class="btn btn-success" href="#" role="button">Вход</a>
+            <!-- <a class="btn btn-success header__link-basket" href="#" role="button">
+              <div class="header__basket">
+                <img src="img/basket2.png" alt="basket">
+              </div>
+              Корзина
+            </a> -->
+            <div class="dropdown">
+              <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                aria-expanded="false">
+                Профиль
+              </button>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Заказы</a></li>
+                <li><a class="dropdown-item" href="#">Админ панель</a></li>
+                <li>
+                  <hr class="dropdown-divider">
+                </li>
+                <li><a class="dropdown-item" href="#">Выход</a></li>
+              </ul>
+            </div>
           </div>
         </div>
-      </div>
     </header>
     <main id="main" class="main">
       <section id="video" class="video">
@@ -108,42 +125,56 @@
         <hr id="slider__band" class="slider__band">
       </section>
       <section class="filter-menu">
-        <a class="filter-menu__link" href="menu/menu.html">
-          <div class="filter-menu__img-block">
-            <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+        <div class="row">
+          <div class="col justify-content-center">
+            <a class="filter-menu__link" href="menu/menu.html">
+              <div class="filter-menu__img-block">
+                <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+              </div>
+              <p class="filter-menu__title">Роллы</p>
+            </a>
           </div>
-          <p class="filter-menu__title">Роллы</p>
-        </a>
-        <a class="filter-menu__link" href="menu/menu.html">
-          <div class="filter-menu__img-block">
-            <img class="filter-menu__img" src="img/pizza-card.jpg" alt="rolls-card">
+          <div class="col justify-content-center">
+            <a class="filter-menu__link" href="menu/menu.html">
+              <div class="filter-menu__img-block">
+                <img class="filter-menu__img" src="img/pizza-card.jpg" alt="rolls-card">
+              </div>
+              <p class="filter-menu__title">Пицца</p>
+            </a>
           </div>
-          <p class="filter-menu__title">Пицца</p>
-        </a>
-        <a class="filter-menu__link" href="menu/menu.html">
-          <div class="filter-menu__img-block">
-            <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+          <div class="col justify-content-center">
+            <a class="filter-menu__link" href="menu/menu.html">
+              <div class="filter-menu__img-block">
+                <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+              </div>
+              <p class="filter-menu__title">Роллы</p>
+            </a>
           </div>
-          <p class="filter-menu__title">Роллы</p>
-        </a>
-        <a class="filter-menu__link" href="menu/menu.html">
-          <div class="filter-menu__img-block">
-            <img class="filter-menu__img" src="img/fastfood-card.jpg" alt="rolls-card">
+          <div class="col justify-content-center">
+            <a class="filter-menu__link" href="menu/menu.html">
+              <div class="filter-menu__img-block">
+                <img class="filter-menu__img" src="img/fastfood-card.jpg" alt="rolls-card">
+              </div>
+              <p class="filter-menu__title">Закуски</p>
+            </a>
           </div>
-          <p class="filter-menu__title">Закуски</p>
-        </a>
-        <a class="filter-menu__link" href="menu/menu.html">
-          <div class="filter-menu__img-block">
-            <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+          <div class="col justify-content-center">
+            <a class="filter-menu__link" href="menu/menu.html">
+              <div class="filter-menu__img-block">
+                <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+              </div>
+              <p class="filter-menu__title">Роллы</p>
+            </a>
           </div>
-          <p class="filter-menu__title">Роллы</p>
-        </a>
-        <a id="filter-menu__link" class="filter-menu__link" href="menu/menu.html">
-          <div class="filter-menu__img-block">
-            <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+          <div class="col justify-content-center">
+            <a id="filter-menu__link" class="filter-menu__link" href="menu/menu.html">
+              <div class="filter-menu__img-block">
+                <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
+              </div>
+              <p class="filter-menu__title">Роллы</p>
+            </a>
           </div>
-          <p class="filter-menu__title">Роллы</p>
-        </a>
+        </div>
       </section>
       <section id="about" class="about">
         <hr class="about__band">
@@ -300,19 +331,19 @@
       <div class="footer__social-block">
         <h2 class="footer__soc-title">Жуем, Любуемся, Улыбаемся. <br>
           Время роллов – наслаждаемся!</h2>
+        <a href="https://www.instagram.com/gurman.hall/"></a>
         <div class="footer__soc">
-          <a href="https://www.instagram.com/gurman.hall/">
-            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-              <path
-                d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
-                stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
-              <path
-                d="M3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16Z"
-                stroke="#E1D4C9" />
-              <path d="M17.5 6.51L17.51 6.49889" stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
-            </svg>
-          </a>
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+            <path
+              d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+              stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
+            <path
+              d="M3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16Z"
+              stroke="#E1D4C9" />
+            <path d="M17.5 6.51L17.51 6.49889" stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
+          </svg>
         </div>
+        </a>
       </div>
     </footer>
   </div>
