--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
   <meta charset="UTF-8">
@@ -25,10 +25,10 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#">Контакты</a>
+                <a class="nav-link" aria-current="page" href="#footer">Контакты</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">О нас</a>
+                <a class="nav-link" href="#filter-menu__link">О нас</a>
               </li>
             </ul>
           </div>
@@ -50,12 +50,12 @@
           </div>
           <div class="header__btn-block">
             <a class="btn btn-success" href="#" role="button">Вход</a>
-            <!-- <a class="btn btn-success header__link-basket" href="#" role="button">
+            <a class="btn btn-success header__link-basket" href="#" role="button">
               <div class="header__basket">
                 <img src="img/basket2.png" alt="basket">
               </div>
               Корзина
-            </a> -->
+            </a>
             <div class="dropdown">
               <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
@@ -72,6 +72,7 @@
             </div>
           </div>
         </div>
+      </div>
     </header>
     <main id="main" class="main">
       <section id="video" class="video">
@@ -331,18 +332,18 @@
       <div class="footer__social-block">
         <h2 class="footer__soc-title">Жуем, Любуемся, Улыбаемся. <br>
           Время роллов – наслаждаемся!</h2>
-        <a href="https://www.instagram.com/gurman.hall/"></a>
-        <div class="footer__soc">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
-            <path
-              d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
-              stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
-            <path
-              d="M3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16Z"
-              stroke="#E1D4C9" />
-            <path d="M17.5 6.51L17.51 6.49889" stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
-          </svg>
-        </div>
+        <a href="https://www.instagram.com/gurman.hall/">
+          <div class="footer__soc">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none">
+              <path
+                d="M12 16C14.2091 16 16 14.2091 16 12C16 9.79086 14.2091 8 12 8C9.79086 8 8 9.79086 8 12C8 14.2091 9.79086 16 12 16Z"
+                stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M3 16V8C3 5.23858 5.23858 3 8 3H16C18.7614 3 21 5.23858 21 8V16C21 18.7614 18.7614 21 16 21H8C5.23858 21 3 18.7614 3 16Z"
+                stroke="#E1D4C9" />
+              <path d="M17.5 6.51L17.51 6.49889" stroke="#E1D4C9" stroke-linecap="round" stroke-linejoin="round" />
+            </svg>
+          </div>
         </a>
       </div>
     </footer>
