--- a/card/card.html
+++ b/card/card.html
@@ -7,6 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
   <link type="image/x-icon" rel="shortcut icon" href="../img/sushi-roll.png">
+  <link rel="stylesheet" href="../sass/normalize.css">
   <link rel="stylesheet" href="../sass/style.css">
   <title>Меню</title>
 </head>
