feat: fix adaptive

--- a/index.html
+++ b/index.html
@@ -49,18 +49,24 @@
             </div>
           </div>
           <div class="header__btn-block">
+            <!-- кнопка вход -->
             <a class="btn btn-success" href="#" role="button">Вход</a>
+            <!-- начало кнопки корзина -->
             <a class="btn btn-success header__link-basket" href="#" role="button">
               <div class="header__basket">
                 <img src="img/basket2.png" alt="basket">
               </div>
               Корзина
             </a>
+            <!-- конец кнопки корзина -->
             <div class="dropdown">
+              <!-- начало кнопки профиль -->
               <button class="btn btn-success dropdown-toggle" type="button" data-bs-toggle="dropdown"
                 aria-expanded="false">
                 Профиль
               </button>
+              <!-- конец кнопки профиль -->
+              <!-- выпадающий список -->
               <ul class="dropdown-menu">
                 <li><a class="dropdown-item" href="#">Заказы</a></li>
                 <li><a class="dropdown-item" href="#">Админ панель</a></li>
