feat: fix adaptive

--- a/index.html
+++ b/index.html
@@ -134,52 +134,64 @@
       <section class="filter-menu">
         <div class="row">
           <div class="col justify-content-center">
+            <!-- начало ссылки меню раздела -->
             <a class="filter-menu__link" href="menu/menu.html">
               <div class="filter-menu__img-block">
                 <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
               </div>
               <p class="filter-menu__title">Роллы</p>
             </a>
+            <!-- конец ссылки меню раздела -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало ссылки меню раздела -->
             <a class="filter-menu__link" href="menu/menu.html">
               <div class="filter-menu__img-block">
                 <img class="filter-menu__img" src="img/pizza-card.jpg" alt="rolls-card">
               </div>
               <p class="filter-menu__title">Пицца</p>
             </a>
+            <!-- конец ссылки меню раздела -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало ссылки меню раздела -->
             <a class="filter-menu__link" href="menu/menu.html">
               <div class="filter-menu__img-block">
                 <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
               </div>
               <p class="filter-menu__title">Роллы</p>
             </a>
+            <!-- конец ссылки меню раздела -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало ссылки меню раздела -->
             <a class="filter-menu__link" href="menu/menu.html">
               <div class="filter-menu__img-block">
                 <img class="filter-menu__img" src="img/fastfood-card.jpg" alt="rolls-card">
               </div>
               <p class="filter-menu__title">Закуски</p>
             </a>
+            <!-- конец ссылки меню раздела -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало ссылки меню раздела -->
             <a class="filter-menu__link" href="menu/menu.html">
               <div class="filter-menu__img-block">
                 <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
               </div>
               <p class="filter-menu__title">Роллы</p>
             </a>
+            <!-- конец ссылки меню раздела -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало ссылки меню раздела -->
             <a id="filter-menu__link" class="filter-menu__link" href="menu/menu.html">
               <div class="filter-menu__img-block">
                 <img class="filter-menu__img" src="img/rolls-card.jpg" alt="rolls-card">
               </div>
               <p class="filter-menu__title">Роллы</p>
             </a>
+            <!-- конец ссылки меню раздела -->
           </div>
         </div>
       </section>
