--- a/menu/menu.html
+++ b/menu/menu.html
@@ -78,6 +78,7 @@
     <main class="main">
       <section id="cards" class="cards">
         <aside class="cards__aside">
+          <!-- начало меню фильтра -->
           <div class="cards__filter">
             <p class="cards__menu">Меню</p>
             <div class="cards__filter-el">
@@ -98,9 +99,11 @@
               </div>
             </div>
           </div>
+          <!-- конец меню фильтра -->
         </aside>
         <div class="row cards__row">
           <div class="col justify-content-center">
+            <!-- начало карточки товара -->
             <a href="../card/card.html">
               <div class="card">
                 <img src="../img/azalia.png" class="card-img-top" alt="azalia">
@@ -125,8 +128,10 @@
                 </div>
               </div>
             </a>
+            <!-- конец карточки товара -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало карточки товара -->
             <div class="card">
               <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               <div class="card-body">
@@ -150,8 +155,10 @@
                 </p>
               </div>
             </div>
+            <!-- конец карточки товара -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало карточки товара -->
             <div class="card">
               <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               <div class="card-body">
@@ -175,8 +182,10 @@
                 </p>
               </div>
             </div>
+            <!-- конец карточки товара -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало карточки товара -->
             <div class="card">
               <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               <div class="card-body">
@@ -200,8 +209,10 @@
                 </p>
               </div>
             </div>
+            <!-- конец карточки товара -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало карточки товара -->
             <div class="card">
               <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               <div class="card-body">
@@ -225,8 +236,10 @@
                 </p>
               </div>
             </div>
+            <!-- конец карточки товара -->
           </div>
           <div class="col justify-content-center">
+            <!-- начало карточки товара -->
             <div class="card">
               <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               <div class="card-body">
@@ -250,7 +263,9 @@
                 </p>
               </div>
             </div>
+            <!-- конец карточки товара -->
           </div>
+          <!-- начало пагинации -->
           <nav aria-label="Page navigation example">
             <ul id="pagination" class="pagination">
               <li class="page-item">
@@ -269,6 +284,7 @@
               </li>
             </ul>
           </nav>
+          <!-- конец пагинации -->
         </div>
       </section>
     </main>
