--- a/card/card.html
+++ b/card/card.html
@@ -77,6 +77,7 @@
     </header>
     <main class="main">
       <section class="big-card">
+        <!-- начало карточки товара -->
         <div class="big-card__main-container">
           <div class="big-card__card-block">
             <div class="big-card__img-block">
@@ -101,6 +102,7 @@
             </div>
           </div>
         </div>
+        <!-- конец карточки товара -->
       </section>
     </main>
     <footer id="footer" class="footer">
