--- a/menu/menu.html
+++ b/menu/menu.html
@@ -104,36 +104,73 @@
         <div class="row cards__row">
           <div class="col justify-content-center">
             <!-- начало карточки товара -->
-            <a href="../card/card.html">
-              <div class="card">
-                <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-                <div class="card-body">
-                  <h5 class="card-title">Азалия</h5>
-                  <div class="cards__price-btn">
+            <div class="card">
+              <div class="card-img-top-block">
+                <img src="../img/photo_2024-02-06_14-43-32.jpg" class="card-img-top" alt="azalia">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Азалия</h5>
+                <div class="cards__price-btn">
+                  <div class="cards__price-sum">
                     <p class="card-text"><del>20р.</del> <ins>15р.</ins></p>
-                    <a href="#" class="btn btn-success cards__btn">
-                      <div class="cards__basket">
-                        <img src="../img/basket2.png" alt="basket">
-                      </div>
-                      <p class="cards__basket-title">в корзину</p>
-                    </a>
+                    <p class="cards__sum">8шт.</p>
                   </div>
-                  <p class="cards__description">
-                    водоросли нори 0,5,
-                    рис 140 гр,
-                    сыр креметто 55 гр,
-                    свежий огурчик 20 гр,
-                    лосось 30 гр
-                  </p>
+                  <a href="#" class="btn btn-success cards__btn">
+                    <div class="cards__basket">
+                      <img src="../img/basket2.png" alt="basket">
+                    </div>
+                    <p class="cards__basket-title">Хочу съесть!</p>
+                  </a>
                 </div>
+                <p class="cards__description">
+                  водоросли нори 0,5,
+                  рис 140 гр,
+                  сыр креметто 55 гр,
+                  свежий огурчик 20 гр,
+                  лосось 30 гр
+                </p>
               </div>
-            </a>
+            </div>
             <!-- конец карточки товара -->
           </div>
           <div class="col justify-content-center">
             <!-- начало карточки товара -->
             <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
+              <div class="card-img-top-block">
+                <img src="../img/rolss2.jpg" class="card-img-top" alt="azalia">
+              </div>
+              <div class="card-body">
+                <h5 class="card-title">Азалия</h5>
+                <div class="cards__price-btn">
+                  <div class="cards__price-sum">
+                    <p class="card-text">20р.
+                    </p>
+                    <p class="cards__sum">8шт.</p>
+                  </div>
+                  <a href="#" class="btn btn-success cards__btn">
+                    <div class="cards__basket">
+                      <img src="../img/basket2.png" alt="basket">
+                    </div>
+                    <p class="cards__basket-title">в корзину</p>
+                  </a>
+                </div>
+                <p class="cards__description">
+                  водоросли нори 0,5,
+                  рис 140 гр,
+                  сыр креметто 55 гр,
+                  свежий огурчик 20 гр,
+                  лосось 30 гр
+                </p>
+              </div>
+            </div>
+            <!-- конец карточки товара -->
+          </div>
+          <div class="col justify-content-center">
+            <!-- начало карточки товара -->
+            <div class="card">
+              <div class="card-img-top-block">
+                <img src="../img/nigiri.jpg" class="card-img-top" alt="azalia">
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Азалия</h5>
                 <div class="cards__price-btn">
@@ -160,7 +197,9 @@
           <div class="col justify-content-center">
             <!-- начало карточки товара -->
             <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
+              <div class="card-img-top-block">
+                <img src="../img/azalia.png" class="card-img-top" alt="azalia">
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Азалия</h5>
                 <div class="cards__price-btn">
@@ -187,7 +226,9 @@
           <div class="col justify-content-center">
             <!-- начало карточки товара -->
             <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
+              <div class="card-img-top-block">
+                <img src="../img/azalia.png" class="card-img-top" alt="azalia">
+              </div>
               <div class="card-body">
                 <h5 class="card-title">Азалия</h5>
                 <div class="cards__price-btn">
@@ -214,34 +255,9 @@
           <div class="col justify-content-center">
             <!-- начало карточки товара -->
             <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
-              <div class="card-body">
-                <h5 class="card-title">Азалия</h5>
-                <div class="cards__price-btn">
-                  <p class="card-text">20р.
-                  </p>
-                  <a href="#" class="btn btn-success cards__btn">
-                    <div class="cards__basket">
-                      <img src="../img/basket2.png" alt="basket">
-                    </div>
-                    <p class="cards__basket-title">в корзину</p>
-                  </a>
-                </div>
-                <p class="cards__description">
-                  водоросли нори 0,5,
-                  рис 140 гр,
-                  сыр креметто 55 гр,
-                  свежий огурчик 20 гр,
-                  лосось 30 гр
-                </p>
+              <div class="card-img-top-block">
+                <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               </div>
-            </div>
-            <!-- конец карточки товара -->
-          </div>
-          <div class="col justify-content-center">
-            <!-- начало карточки товара -->
-            <div class="card">
-              <img src="../img/azalia.png" class="card-img-top" alt="azalia">
               <div class="card-body">
                 <h5 class="card-title">Азалия</h5>
                 <div class="cards__price-btn">
