--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
       <!-- ВЕРХНЕЕ МЕНЮ -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid" bis_skin_checked="1">
-          <a class="navbar-brand" href="/catalog/" bis_skin_checked="1">Меню</a>
+          <a class="navbar-brand" href="menu/menu.html">Меню</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
             aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="collapse navbar-collapse" id="navbarNav" bis_skin_checked="1">
+          <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link" aria-current="page" href="#footer" bis_skin_checked="1">Контакты</a>
+                <a class="nav-link" aria-current="page" href="#footer">Контакты</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#about" bis_skin_checked="1">О нас</a>
